--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,6 +1,6 @@
 # TBD
 
-{{ $os := "" }}
+{{ .chezmoi.TBD.$os := "" }}
 
-[data.TBD]
-    os = {{ $os | quote }}
+[TBD]
+    os = {{ .chezmoi.TBD.$os | quote }}
