Removed .chezmoi from template

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,6 +1,6 @@
 # TBD
 
-{{ .chezmoi.TBD.$os := "" }}
+{{ $os := "" }}
 
 [TBD]
-    os = {{ .chezmoi.TBD.$os | quote }}
+    os = {{ $os | quote }}
