added rage encryption

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,4 +1,8 @@
-# TBD
+encryption = "age"
+[age]
+    command = "rage"
+    identity = "~/.config/chezmoi/key.txt"
+    recipient = "age10c8svc7zlqjuu04sc79wpxezgv68296x5x0v93jxfr3ynplwxqhqyk04lp"
 
 {{ $os := "" }}
 
