added ubuntu apt upgrade script

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -5,6 +5,7 @@ encryption = "age"
     recipient = "age10c8svc7zlqjuu04sc79wpxezgv68296x5x0v93jxfr3ynplwxqhqyk04lp"
 
 {{ $os := "" }}
+# {{ $username := promptStringOnce . "username" "Username" -}}
 
 [TBD]
     os = {{ $os | quote }}
