--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -4,8 +4,13 @@ encryption = "age"
     identity = "~/.config/chezmoi/key.txt"
     recipient = "age10c8svc7zlqjuu04sc79wpxezgv68296x5x0v93jxfr3ynplwxqhqyk04lp"
 
-{{ $os := "" }}
-# {{ $username := promptStringOnce . "username" "Username" -}}
-
-[TBD]
-    os = {{ $os | quote }}
+[data]
+  # Set "true" if you want to apply the configuration
+  applyGit    = true
+  applyNeovim = true
+  applyTmux   = true
+  applyZsh    = true
+  # If you want to install useful packages, set "true"
+  # package list is in {{ .chezmoi.sourceDir }}, you can use `chezmoi cd` to go to the source directory of chezmoi quickly
+  # and find the list in `.chezmoidata/packages.toml`
+  installUsefulPackages = true
