added keepassxc and telekasten

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -4,6 +4,9 @@ encryption = "age"
     identity = "~/.config/chezmoi/key.txt"
     recipient = "age10c8svc7zlqjuu04sc79wpxezgv68296x5x0v93jxfr3ynplwxqhqyk04lp"
 
+[keepassxc]
+     database = "~/.config/private_secrets.kdbx"
+
 [data]
   # Set "true" if you want to apply the configuration
   applyGit    = true
