added to .bashrc

--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -3,18 +3,18 @@
 
 # Load starship prompt if starship is installed
 if [ -x /usr/bin/starship ]; then
-	__main() {
-		local major="${BASH_VERSINFO[0]}"
-		local minor="${BASH_VERSINFO[1]}"
+  __main() {
+    local major="${BASH_VERSINFO[0]}"
+    local minor="${BASH_VERSINFO[1]}"
 
-		if ((major > 4)) || { ((major == 4)) && ((minor >= 1)); }; then
-			source <("/usr/bin/starship" init bash --print-full-init)
-		else
-			source /dev/stdin <<<"$("/usr/bin/starship" init bash --print-full-init)"
-		fi
-	}
-	__main
-	unset -f __main
+    if ((major > 4)) || { ((major == 4)) && ((minor >= 1)); }; then
+      source <("/usr/bin/starship" init bash --print-full-init)
+    else
+      source /dev/stdin <<<"$("/usr/bin/starship" init bash --print-full-init)"
+    fi
+  }
+  __main
+  unset -f __main
 fi
 
 # Advanced command-not-found hook
@@ -81,3 +81,5 @@ alias jctl="journalctl -p 3 -xb"
 # Recent installed packages
 alias rip="expac --timefmt='%Y-%m-%d %T' '%l\t%n %v' | sort | tail -200 | nl"
 [ -r /usr/share/bash-completion/bash_completion ] && . /usr/share/bash-completion/bash_completion
+
+# more commands later
